div.content and dropdown menu issue
I discovered that the position: absolute; of my div.content was affecting the dropdown menu (above) and that dropdown menu was not working. Also, when I opened my website in Edge, it was the same issue but also the div.content itself was displayed too high and partly covered the top menu. I tried to find out what might be the issue and when I disabled the position: absolute; from that div, my dropdown menu worked properly but my hero text was displayed below the image. To fix this issue, I decided to give the position: absolute; property to the child div of div.content and add the negative margin top to it. That fixed all issues.

--- a/CSS/scss/partials/_hero-image.scss
+++ b/CSS/scss/partials/_hero-image.scss
@@ -38,7 +38,7 @@
     z-index: 3;
 }
 .content {
-    position: absolute;
+    // position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,8 +48,8 @@
 }
 .banner .content_container {
     text-align: center;
-    padding-top: 100px;
-    position: relative;
+    position: absolute;
+    margin-top: -1000px;
     z-index: 4;
 }
 @media only screen and (min-width: $break-l){
