--- a/CSS/scss/partials/_main-navig.scss
+++ b/CSS/scss/partials/_main-navig.scss
@@ -1,12 +1,14 @@
 @use '../abstracts/index' as *;
 
-//-------------------------------------container with 7 menu elements---------------------------------
-// .container_middle {
-//     margin-top: 50px;
-// }
+
 //----------------------------------------general style-----------------------------------------------
 .service-list {
-    padding: 0 30px;
+    margin: 0 -5px;
+}
+@media only screen and (min-width: $break-xl) {
+    .service-list .row {
+        margin: 0 -50px;
+    }
 }
 .service-list .block {
     text-decoration: none;
@@ -52,6 +54,25 @@
     line-height: 1.375rem;
     margin-bottom: 13px;
     font-weight: 400;
+}
+
+@media only screen and (min-width: $break-m) {
+    .visible-md {
+        display: block!important;
+    }
+}
+@media only screen and (min-width: $break-l) {
+    .visible-lg {
+        display: block!important;
+    }
+    .visible-md {
+        display: none!important;
+    }
+}
+@media only screen and (min-width: $break-xl) {
+    .visible-lg {
+        display: none!important;
+    }
 }
 //-style for each of 7 menu elements and it's hover effect, colours and buttons----------------------
 
